--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>I made a change!</title>
-  <link rel='stylesheet' href='/css'>
+  <!-- <link rel='stylesheet' href='public/styles.css'> -->
+  <link rel='stylesheet' href='css'>
 </head>
 
 <body>
