--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>I made a change!</title>
   <!-- <link rel='stylesheet' href='public/styles.css'> -->
-  <link rel='stylesheet' href='/public/styles.css' type='text/css'>
+  <!-- <link rel='stylesheet' href='/public/styles.css' type='text/css'> -->
 </head>
 
 <body>
   <h1>This is an update.</h1>
-  <script src='/js'></script>
+  <script src="/js"></script>
 </body>
 
 </html>
