--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>I made a change!</title>
   <!-- <link rel='stylesheet' href='public/styles.css'> -->
-  <!-- <link rel='stylesheet' href='/public/styles.css' type='text/css'> -->
+  <link rel='stylesheet' href='styles.css'>
 </head>
 
 <body>
